--- a/eventFrontend/src/app/authentication/login/login.component.html
+++ b/eventFrontend/src/app/authentication/login/login.component.html
@@ -26,14 +26,15 @@
   
               <!-- Submit Button -->
               <div class="text-center m-3">
-                <button type="submit" [disabled]="!loginForm.valid" class="btn fs-5 btn-primary m-2 ">Login</button>
+                <button type="submit" [disabled]="!loginForm.valid" class="btn fs-5 btn-primary m-1 ">Login</button>
                 <button type="reset" class="btn fs-5 btn-secondary">Reset</button>
+                <button type="button" class="btn fs-5 btn-secondary m-1" routerLink="/dashboard">Dashboard</button>
               </div>
             </form>
   
             <!-- Register Link -->
             <div class="mt-3 text-center">
-              <p>Don't have an account? <a routerLink="/register">Register</a></p>
+              <p>Don't have an account? <a routerLink="/registeruser">Register</a></p>
             </div>
           </div>
         </div>
