--- a/eventFrontend/src/app/layouts/navbar/navbar.component.html
+++ b/eventFrontend/src/app/layouts/navbar/navbar.component.html
@@ -16,6 +16,32 @@
           <li class="nav-item">
             <a class="nav-link" routerLink="/registeruser">Register</a>
           </li>
+          <li class="nav-item" *ngIf="isLoggedIn">
+            <a class="nav-link" routerLink="/create-event" >Add Event</a>
+          </li>
+          <!-- <li class="nav-item dropdown" *ngIf="isLoggedIn">
+            <a class="nav-link dropdown-toggle"  id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              Profile
+            </a>
+            <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
+              <a class="dropdown-item" >User ID: {{ userId }}</a>
+              <div class="dropdown-divider"></div>
+              <a class="dropdown-item"  (click)="logout()">Logout</a>
+            </div>
+          </li> -->
+
+          <li class="nav-item dropdown" *ngIf="isLoggedIn">
+            <a class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                <i class="fas fa-user-circle"></i> Profile
+            </a>
+            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <li class="dropdown-item">User ID: {{ userId }}</li>
+                <li><hr class="dropdown-divider"></li>
+                <li class="dropdown-driver">              
+                  <a class="dropdown-item" (click)="logout()">Logout</a>                
+                </li>
+            </ul>
+        </li>
         </ul>
       </div>
     </div>
