--- a/eventFrontend/src/app/pages/dashboard/dashboard.component.html
+++ b/eventFrontend/src/app/pages/dashboard/dashboard.component.html
@@ -1,17 +1,17 @@
 <div>
-<app-navbar></app-navbar>
+  <app-navbar></app-navbar>
 
-<div class="container">
-    <h2>Dashboard</h2>
+  <div class="container-fluid p-3">
+    <h2 class="text-center mb-2">Dashboard</h2>
     <div class="table-responsive">
       <table class="table table-striped table-bordered">
-        <thead>
+        <thead class="thead-dark">
           <tr>
             <th>Title</th>
             <th>Description</th>
             <th>Date</th>
             <th>Location</th>
-            <th>Actions</th>
+            <th *ngIf="isLoggedIn">Actions</th>
           </tr>
         </thead>
         <tbody>
@@ -21,12 +21,15 @@
             <td>{{ event.date | date }}</td>
             <td>{{ event.location }}</td>
             <td>
-              <a [routerLink]="['/events', event._id]" class="btn btn-primary btn-sm">View Details</a>
-              <!-- Add more actions if needed, e.g., edit or delete -->
+              <ng-container *ngIf="isLoggedIn">
+                <a [routerLink]="['/events', event._id]" class="btn btn-primary btn-sm">View Details</a>
+              </ng-container>
             </td>
           </tr>
         </tbody>
       </table>
     </div>
   </div>
+
+  <app-footer></app-footer>
 </div>
